<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">Remote Whoopee Cushion</string>

    <!-- Main Activity -->
    <string name="main_title">Remote Whoopee Cushion</string>
    <string name="main_description">Simply tap on the button below to fart, or use your Android Wear device to trigger a fart remotely.\n\nCheck out the settings page to change the fart type, set a fart delay and notification options.</string>
    <string name="action_settings">Settings</string>
    <string name="action_recordings">Reactions</string>
    <string name="action_farts">Custom Farts</string>
    <string name="fart_button">Tap to Fart!</string>
    <string name="fart_button_recording">Recording…</string>
    <string name="help_card_header">Remote Whoopee Cushion</string>
    <string name="main_bg_description">Retro Whoopee Cushion Logo</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_fart_type">Fart Type</string>
    <string name="settings_delay">Delay Length</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Recordings Activity -->
    <string name="recordings_help">Help</string>
    <string name="title_activity_recordings">Reactions</string>
    <string name="recordings_help_message">Tap on any recording to play and swipe any recording to delete it.</string>
    <string name="recordings_help_title">Help</string>
    <string name="recordings_help_ok">OK</string>
    <string name="no_recordings_header">No Reactions</string>
    <string name="no_recordings_msg">You don\'t have any recorded reactions yet!\n\nTo create reactions, turn on recording from the settings page and then find a victim!</string>

    <!-- Farts Activity -->
    <string name="farts_help">Help</string>
    <string name="title_activity_farts">Custom Farts</string>
    <string name="farts_help_message">Tap on any custom fart to play it and swipe to delete it.</string>
    <string name="farts_help_title">Help</string>
    <string name="farts_help_ok">OK</string>
    <string name="farts_help_save">Save</string>
    <string name="farts_help_cancel">Delete</string>
    <string name="no_farts_header">No Custom Farts</string>
    <string name="no_farts_msg">You don\'t have any custom farts yet!\n\nTo record a custom fart, click the plus button on the bottom right to start recording, and tap it again to stop recording. Once saved go to the settings page to use it on your victims!</string>
    <string name="fart_save_dialog_title">Save Custom Fart</string>
    <string name="fart_save_dialog_message">Please enter a filename for your new custom fart sound.</string>
    <string name="fart_save_dialog_hint">A Custom Fart Name</string>

    <!-- Settings Activity -->
    <string name="settings_header_fart_type">Select a Fart Type:</string>
    <string name="settings_desc_fart_type">The type of fart sound you want to use.</string>
    <string name="settings_fart_header">Fart Settings</string>
    <string name="settings_header_fart_delay">Select a Fart Delay:</string>
    <string name="settings_desc_fart_delay">How long should we wait after you hit the trigger?</string>
    <string name="settings_header_fart_notify">Fart Notification</string>
    <string name="settings_header_fart_notify_off_summary">You will not get notified.</string>
    <string name="settings_header_fart_notify_on_summary">You will get notified.</string>
    <string name="settings_header_fart_notify_off_title">Off</string>
    <string name="settings_header_fart_notify_on_title">On</string>
    <string name="settings_header_record">Reaction Recording</string>
    <string name="settings_header_record_off_summary">No reactions will be recorded.</string>
    <string name="settings_header_record_on_summary">10 seconds of reaction audio will be recorded.</string>
    <string name="settings_header_record_off_title">Off</string>
    <string name="settings_header_record_on_title">On</string>

</resources>
