<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.mikeflynn.remotewhoopeecushion.FartsActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/fartsFrame">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/whoopee_bg"
        android:contentDescription="@string/main_bg_description"
        android:alpha=".75" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recordingsList"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"/>

    <ImageButton
        android:id="@+id/newCustomFart"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom|end"
        android:background="@drawable/confirm_button"
        android:layout_margin="20dp"
        android:src="@drawable/ic_add_white_48dp"
        android:onClick="recordCustomFart"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/noFartsMsg"
        android:layout_gravity="top|center"
        card_view:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardElevation="5sp"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:text="@string/no_farts_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/offblack" />

            <View
                android:background="@color/black"
                android:layout_width ="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/no_farts_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/offblack"
                android:textSize="16sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>